# ToyRobot

./: .gitignore  CMakeLists.txt  README.md
include/: ToyRobot.h
src/: ToyRobot.cpp  main.cpp
tests/: ToyRobotTest.cpp
